# hydra-math-swift

./: HydraMath.podspec  Package.swift
Example/Tests/: StableswapTests.swift
HydraMath/Classes/: Stableswap.swift  SwiftBridgeCore.swift
HydraMathApi.xcodeproj/: project.pbxproj
HydraMathApi/HydraMathApi/: HydraMathApi.h
HydraMathApi/HydraMathApi.xcodeproj/: project.pbxproj
HydraMathApi/HydraMathApiTests/: HydraMathApiTests.swift
Sources/: Stableswap.swift  SwiftBridgeCore.swift  XYKSwap.swift
Tests/: StableswapTests.swift  XYKSwapTests.swift
bindings/: Cargo.toml  build.sh
bindings/src/: lib.rs
bindings/xcframework/hydra_dx.xcframework/: Info.plist
bindings/xcframework/hydra_dx.xcframework/ios-arm64/Headers/: hydra-dx.h
bindings/xcframework/hydra_dx.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
