# This file is create based on https://github.com/galacticcouncil/HydraDX-wasm/blob/main/Cargo.toml to support swift build

[package]
authors = ['Novasama Technologies']
edition = '2021'
license = 'Apache 2.0'
name = "hydra-dx"
repository = 'https://github.com/novasamatech/hydra-math-swift'
version = "4.4.0"

build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
wee_alloc = "0.4.5"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
serde-aux = "4.2.0"
sp-arithmetic = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "stable2409-patch6", default-features = false }
hydra-dx-math = { git = "https://github.com/galacticcouncil/HydraDX-node", version="10.3.0" }
swift-bridge = "0.1"

[profile.release]
opt-level = "s"

[features]
default = ["std"]
std = ["sp-arithmetic/std"]
stableswap = []